<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StatsActivity" >

    <LinearLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_stats"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/custom_action_bar"
        android:background="#cacaca" />

    <TextView 
        android:id="@+id/letter_count"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="65sp"
        android:textColor="#7ed321"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/custom_action_bar"
        android:layout_centerHorizontal="true"
        />
    <TextView 
        android:id="@+id/letter_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/letter_count"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/letter"
        />
    
    <TextView 
        android:id="@+id/word_count"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/letter_text"
        android:layout_marginTop="25dp"
        android:textColor="#f2e219"
        android:textSize="65sp"
        />
    <TextView 
        android:id="@+id/word_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/word"
        android:textSize="30sp"
        android:layout_below="@+id/word_count"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    
    
    <TextView 
        android:id="@+id/game_count"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/word_text"
        android:layout_marginTop="25dp"
        android:textColor="#d0021b"
        android:textSize="65sp"
        />
    <TextView 
        android:id="@+id/game_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/game_count"
		android:text="@string/game"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        />
    <TextView 
        android:id="@+id/share_with_friends"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/share_friends"
        android:textSize="20sp"
        />

</RelativeLayout>