<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="5" >

        <TextView
            android:id="@+id/blank_text"
            android:layout_width="50dp"
            android:layout_height="fill_parent"/>

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:padding="15dp" />

		<RelativeLayout
		    android:id="@+id/menuicon"
		    android:layout_width="50dp"
		    android:layout_height="match_parent"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true" >

		    <TextView
		        android:id="@+id/menuicontext"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="3dp"
		        android:gravity="center"
		        android:textColor="#ababab"
		        android:textSize="20sp" />
		</RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header2"
        android:layout_margin="20dp"
        android:background="@drawable/start_button"
        android:text="@string/startbtnmsg"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/header0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/header2"
        android:layout_toRightOf="@+id/header1"
        android:text="@string/myword2"
        android:textSize="45sp"
      
        android:textColor="#7fd206" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/intromessage"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_start"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/myword"
        android:textSize="45sp" />

</RelativeLayout>