<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >
    
    <RelativeLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="5" >

        <RelativeLayout
            android:id="@+id/newgame_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true" >

            <TextView
                android:id="@+id/newgameicontext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/newgameicon"
                android:textColor="#ababab"
                android:textSize="20sp"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/menuicon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/menuicontext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/menuicon"
                android:textColor="#ababab"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:text="@string/fourletterword"
            android:textSize="20sp" />

    </RelativeLayout>
	
    <View
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#cacaca"
        android:layout_below="@id/custom_action_bar"
        />
	
    <EditText 
        android:id="@+id/user_input"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/edittexthint"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:padding="15dp"
        android:layout_below="@id/custom_action_bar"
        android:inputType="textVisiblePassword"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:digits="abcdefghijklmnopqrstuvwxyz"
        />
    <ListView 
        android:id="@+id/my_list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/user_input"
        android:layout_margin="10dp"
        android:scrollbars="none"
        >
    </ListView>

</RelativeLayout>
